[package]
name = "genetic_algorithm_meta"
version = "0.7.1"
edition = "2021"
readme = "README.md"
description = "A genetic algorithm implementation for optimizing genetic algorithm parameters"
repository = "https://github.com/basvanwesting/genetic-algorithm-meta.git"
homepage = "https://github.com/basvanwesting/genetic-algorithm-meta.git"
documentation = "https://docs.rs/genetic_algorithm/latest/genetic_algorithm_meta"
license = "MIT OR Apache-2.0"
keywords = ["genetic", "ga", "meta"]
exclude = ["/.projections.json", "/performance.txt", "/refactor_script.rb", "/workspace.txt"]
rust-version = "1.71.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
genetic_algorithm = "0.7.1"
rand = { version = "0.8.5", features = ["small_rng"] }
itertools = "0.10.3"
streaming-stats = "0.2.3"
factorial = "0.2.1"
num = "0.4.0"
crossbeam = "0.8"
rayon = "1.5.3"
thread_local = "1.1"
log = "0.4.0"
env_logger = "0.11.3"

[dev-dependencies]
lru = "0.7.5"
distance = "0.4.0"
chrono = "0.4.22"
statrs = "0.16.0"

# for profiling and flamegraph
#[profile.release]
#debug = 1
